# rubiks-cube-solver

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
app/: CMakeLists.txt  cli.cpp
app/solver/: CMakeLists.txt  solve.cpp
include/app/: solve.h
include/cube/: cube.h  cube_constants.h  encode.h  move.h  pdb_constants.h
include/ida_star/: ida_star.h  pdb_handler.h
rubiks-cube-solver/: CMakeLists.txt  main.cpp
rubiks-cube-solver/Algorithm/: CMakeLists.txt  IDAStar.cpp  IDAStar.h
rubiks-cube-solver/Cube/: CMakeLists.txt  Cube.cpp  Cube.h  move.h
rubiks-cube-solver/PatternDatabase/: CMakeLists.txt  PDBFileHandler.h  PatternDatabase.cpp  PatternDatabase.h  generate_pdb.cpp
rubiks-cube-solver/Tables/: move.h  moveTables.cpp  moveTables.h  pieceClassification.h
rubiks-cube-solver/Tests/: CMakeLists.txt  cubeTests.cpp  mainTests.cpp  pdbTests.cpp
rubiks-cube-solver/Utils/: bitUtils.h
rubiks-cube-solver/rubiks-cube-solver.xcodeproj/: project.pbxproj
src/: CMakeLists.txt  main.cpp  main.py
src/Algorithm/: CMakeLists.txt  IDAStar.cpp  IDAStar.h
src/Cube/: CMakeLists.txt  Cube.cpp  Cube.h  types.h  utils.h
src/Legacy/: CMakeLists.txt
src/Legacy/CubeLegacy/: CMakeLists.txt  CubeLegacy.cpp  CubeLegacy.h  typesLegacy.h  utilsLegacy.h
src/Legacy/PatternDatabaseLegacy/: CMakeLists.txt  PDBFileHandler.h  PatternDatabase.cpp  PatternDatabase.h
src/PatternDatabase/: CMakeLists.txt  PDBFileHandler.cpp  PDBFileHandler.h  PatternDatabase.cpp  PatternDatabase.h
src/Tables/: CMakeLists.txt  move.h  moveTables.cpp  moveTables.h  pieceClassification.h
src/Tests/: CMakeLists.txt  cubeTests.cpp  pdbTests.cpp
src/cube/: CMakeLists.txt  __init__.py  cube.cpp  cube_constants.cpp  encode.cpp  faces.py  move.cpp  pieces.py  tables.py  translator.py  utils.py
src/gui/: app.py  test.py
src/ida_star/: CMakeLists.txt  ida_star.cpp  pdb_handler.cpp
src/pattern_db/: pdb_generator.py  utils.py
tests/: CMakeLists.txt  cubeTests.cpp  main_tests.cpp  pdbTests.cpp  test_pieces.py
tests/Include/: catch.hpp
tools/cli/: CMakeLists.txt  cli.cpp
tools/maxdepths/: CMakeLists.txt  maxdepths_api.h  maxdepths_run.cpp
tools/pdbgen/: CMakeLists.txt  pdbgen_api.h  pdbgen_run.cpp
